# heurkit2

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
examples/: auto_demo.py  binpacking_demo.py  compare_algorithms.py  custom_assignment_demo.py  custom_partition_demo.py  custom_problem_minimal_demo.py  cvrp_demo.py  tsp_demo.py
heurkit/: __init__.py
heurkit/algorithms/: __init__.py  greedy.py  hill_climb.py  iterated_local_search.py  simulated_annealing.py  tabu.py  vns.py
heurkit/benchmark/: __init__.py  runner.py
heurkit/core/: __init__.py  callbacks.py  evaluator.py  move.py  problem.py  random_state.py  result.py  runtime.py  solution.py  stopping.py
heurkit/custom/: __init__.py  adapters.py  builder.py  problem.py  score.py  validation.py
heurkit/kernels/: __init__.py
heurkit/kernels/binpacking/: __init__.py  constructors.py  evaluator.py  moves.py  neighbors.py  problem.py  solution.py
heurkit/kernels/cvrp/: __init__.py  constructors.py  evaluator.py  moves.py  neighbors.py  problem.py  solution.py
heurkit/kernels/tsp/: __init__.py  constructors.py  evaluator.py  moves.py  neighbors.py  problem.py  solution.py
heurkit/portfolio/: __init__.py  auto.py  presets.py
heurkit/utils/: distance.py  io.py  metrics.py  plotting.py
tests/: conftest.py  test_algorithms.py  test_benchmark.py  test_binpacking.py  test_custom_problem.py  test_cvrp.py  test_runtime.py  test_tsp.py  test_validation.py
