[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "heurkit"
version = "0.1.0"
description = "A heuristic optimization framework with shared runtime and domain-specific kernels"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "HeurKit Contributors"},
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
]
cli = [
    "typer>=0.9",
]

[tool.setuptools.packages.find]
include = ["heurkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
